web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-class-declaration/output.txt
[SyntaxError]: Identifier has already been declared. (2,14)
2|export class Foo {};
 |            ^
